--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/deporte.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/deporte.properties
@@ -1,7 +1,8 @@
-titulo=Acto Inseguro
+titulo=Deportes
+deportes=Deportes
 #Tabla
-codigo=C\u00f3digo
-descripcion=Descripci\u00f3n
+codigo=Codigo
+nombre=Nombre
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -10,9 +11,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Acto Inseguro
-eliminar=Borrar Acto Inseguro
-duplicar=Duplicar Acto Inseguro
+nuevo=Nuevo Deporte
+eliminar=Borrar Deporte
+duplicar=Duplicar Deporte
 rastro=Rastro
 #Dialogo
 validacionDuplicarVigencia=Necesita: 
@@ -21,29 +22,29 @@ mostrarBorrados1=Se han borrado
 mostrarBorrados2= Registros
 validacionNuevaCentroCosto=Para agregar es necesario adicionar: 
 #RASTRO
-confirmarRastro=La tabla 'SOACTOSINSEGUROS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla SOACTOSINSEGUROS tiene rastros historicos, \u00bfDesea continuar?
+confirmarRastro=La tabla 'DEPORTES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla DEPORTES tiene rastros historicos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'SOACTOSINSEGUROS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'DEPORTES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #EDITAR
 editCodigo=C\u00f3digo
-editDescripcion=Descripci\u00f3n
+editDescripcion=Nombre
 #NUEVO REGISTRO
 nuevoregistro=Nuevo Registro
-ingresarnuevo=Ingresar Nuevo Acto Inseguro
+ingresarnuevo=Ingresar Nuevo Deporte
 codigoN=Codigo: 
 codigoWM=Codigo
-descripcionN=Descripcion: 
-descripcionWM=Descripcion
+nombreN=Nombre: 
+nombreWM=Nombre
 #DUPLICAR REGISTRO
 duplicarregistro=Duplicar Registro
 #Exportar
 codigoX=Codigo
-descripcionX=Descripcion
+nombreX=Nombre
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
 lovvacio=No se encontraron resultados con el criterio de busqueda.
