--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto.properties
@@ -1,2 +1,236 @@
+#Titulo y Fieldsets tooltip del icono
 titulo=Detalles del Concepto
 concepto=Concepto: 
+hojadevidadelconcepto=Hoja de vida del Concepto
+asignaciondecuentas=Asignaci\u00f3n de Cuentas
+cuentasytipocc=Cuentas y Tipo CC
+gruposcontables=Grupos Contables / Nomina / Gerencial
+tiposdetrabajadores=Tipos de Trabajadores
+tiposdecontratos=Tipos de Contratos
+tiposdesalario=Tipos de Salario
+formulas=F\u00f3rmulas
+detallesdelaformulaseleccionada=Detalles de la F\u00f3rmula Seleccionada
+#Cuentas y tipo CC
+fechainicial=Fecha Inicial
+fechafinal=Fecha Final
+tipocc=Tipo CC
+debito=Debito
+descripcion=Descripci\u00f3n
+ccconsolidador=CC Consolidador
+credito=Cr\u00e9dito
+#Grupos Contables Nomina Gerencial
+codigogrupo=Codigo Grupo
+descripciongrupo=Descripcion Grupo
+#Tipos de Trabajadores
+descripciondeltipodetrabajador=Descripcion del tipo de Trabajador
+#Tipos de contratos
+descripciondelcontrato=Descripci\u00f3n del tipo de Contrato
+#Tipos de Salarios
+descripciondeltipodesalario=Descripci\u00f3n del tipo de Salario
+#F\u00f3rmulas
+nombredelaformula=Nombre de la F\u00f3rmula
+ordendeliquidacion=Orden de Liquidacion
+#Nuevo Registro
+nuevoregistro=Nuevo Registro
+seleccionenuevo=Seleccione la tabla a la cual se ingresara el nuevo registro
+gruposcontablesNR=Grupos Contables
+#Dialogos Error
+errorRegNuevo=Todos los campos del nuevo registro no deben estar vacios.
+errorFechasVC=La fecha inicial es menor a 01/01/1990 y/o la fecha final es menor a la fecha inicial.
+eliminacionerror=ELIMINACION ERROR
+eliminacion14=ELIMINACION - PASO 1 DE 4
+errorEliminacionConcepto=Este concepto tiene acumulados de n\u00f3mina por tal motivo no lo puede eliminar.
+paso1Eliminacion=En este momento va a eliminar un concepto con toda su configuraci\u00f3n asociada.
+eliminacion24=ELIMINACION - PASO 2 DE 4
+paso2Eliminacion=\u00bfEst\u00e1 totalmente seguro?
+eliminacion34=ELIMINACION - PASO 3 DE 4
+#LOV TIPOS CENTROS COSTOS
+tiposcentroscostosTCC=Tipos Centros Costos
+buscarTCC=Buscar Tipos Centros Costos: 
+nombreTCC=Nombre
+#LOV CUENTAS DEBITO
+cuentasdebitoCD=Cuentas Debito
+buscarCD=Buscar Cuenta Debito: 
+codigoCD=Codigo
+descripcionCD=Descripcion
+#LOV CUENTAS CREDITO
+cuentascreditoCC=Cuentas Credito
+buscarCC=Buscar Cuenta Credito: 
+codigoCC=C\u00f3digo
+descripcionCC=Descripci\u00f3n
+#LOV CENTRO COSTO CONSOLIDADOR
+centrocostoconsolidadorCCC=Centro Costo Consolidador
+buscarCCC=Buscar Centro Costo: 
+codigoCCC=C\u00f3digo
+nombreCCC=Nombre
+#LOV GRUPOS CONCEPTOS
+gruposconceptosGC=Grupos Conceptos
+buscarGC=Buscar Grupo Concepto: 
+codigoGC=C\u00f3digo
+descripcionGC=Descripci\u00f3n
+#LOV TIPOS TRABAJADORES
+tipostrabajadoresTT=Tipos Trabajadores
+buscarTT=Buscar Tipo Trabajador: 
+nombreTT=Nombre
+#LOV TIPOS CONTRATOS
+tiposcontratosTC=Tipos Contratos
+buscarTC=Buscar Tipo Contrato: 
+nombreTC=Nombre
+#LOV REFORMAS LABORALES
+reformaslaboralesRL=Tipos Salarios
+buscarRL=Buscar Tipo Salario: 
+nombreRL=Nombre
+#LOV FORMULAS
+formulasF=Formulas
+buscarF=Buscar Formula: 
+nombreF=Nombre
+nombrecortoF=Nombre Corto
+#LOV ORDEN DE LIQUIDACI\u00d3N
+ordendeliquidacionOL=Orden de Liquidaci\u00f3n
+buscarOL=Buscar Orden: 
+ordenOL=Orden
+descripcionOL=Descripci\u00f3n
+#Toolbar
+guardar=Guardar
+editar=Editar
+lista=Lista de Valores
+filtrar=Activar Filtrado
+xls=Exportar a XLS
+xml=Exportar a XML
+pdf=Exportar a PDF
+nuevo=Nuevo Concepto Jur\u00eddico
+eliminar=Borrar Concepto Jur\u00eddico
+duplicar=Duplicar Concepto Jur\u00eddico
+rastro=Rastro
+#NUEVOS REGISTROS PARA CADA TABLA
+#Nuevo registro Cuentas y tipos cc
+NuevoRegistroVigenciaCuenta=Nuevo Registro Cuentas y Tipos CC
+ingresarnuevo=Ingresar nueva informaci\u00f3n del concepto
+fechainicialN=Fecha Inicial: 
+fechafinalN=Fecha Final: 
+tipoccN=Tipo CC: 
+tipoccWM=Tipo CC
+cuentadebitoN=Cuenta Debito: 
+cuentadebitoWM=Cuenta Debito
+descripciondebitoN=Descripcion Debito: 
+descripciondebitoWM=Descripcion Debito
+ccconsolidadorN=CC Consolidador: 
+ccconsolidadorWM=CC Consolidador Cuenta Debito
+cuentacreditoN=Cuenta Credito: 
+cuentacreditoWM=Cuenta Credito
+descripcioncreditoN=Descripci\u00f3n Cr\u00e9dito: 
+descripcioncreditoWM=Descripci\u00f3n Cr\u00e9dito
+ccconsolidadorcuentacreditoN=CC Consolidador: 
+ccconsolidadorcuentacreditoWM=CC Consolidador cuenta Cr\u00e9dito
+#Duplciar registro Cuentas y tipos cc
+DuplicarRegistroVigenciaCuenta=Duplicar Registro Cuentas y Tipos CC
+#Nuevoregistro Grupos Contables/Nomina/Gerencial
+NuevoRegistroGrupoConcepto=Nuevo Registro Grupos Contables/Nomina/Gerencial
+codigoN=C\u00f3digo: 
+codigoWM=C\u00f3digo
+descripciongrupoN=Descripci\u00f3n Grupo: 
+descripciongrupoWM=Descripci\u00f3n Grupo
+#Duplicarregistro Grupos Contables/Nomina/Gerencial
+DuplicarRegistroVigenciaGrupoConcepto=Duplicar Registro Grupos Contables/Nomina/Gerencial
+#Nuevo Registro - Tipos Trabajadores
+NuevoRegistroVigenciaConceptoTT=Nuevo Registro - Tipos Trabajadores
+ingresarnuevoTT=Ingresar nueva informaci\u00f3n del tipo de trabajador
+tipotrabajadorN=Tipo Trabajador: 
+tipotrabajadorWM=Tipo Trabajador 
+#Duplicarregistro - Tipos Trabajadores
+DuplicarRegistroVigenciaConceptoTT=Duplicar Registro - Tipos Trabajadores
+#Nuevo Registro Tipo Contrato
+NuevoRegistroVigenciaConceptoTC=Nuevo Registro - Tipos Contratos
+ingresarnuevoTC=Ingresar nuevo Tipo Contrato
+tipocontratoN=Tipo Contrato: 
+tipocontratoWM=Tipo Contrato
+#Duplicar Registro Tipo Contrato
+DuplicarRegistroVigenciaConceptoTC=Duplicar Registro - Tipos Trabajadores
+#Nuevo Registro Tipo Salario
+NuevoRegistroVigenciaConceptoRL=Nuevo Registro - Tipos Salarios
+ingresarnuevoRL=Ingresar nuevo Tipo salario
+tiposalarioN=Tipo Salario: 
+tiposalarioWM=Tipo Salario
+#Duplicar Registro Tipo Salario
+DuplicarRegistroVigenciaConceptoRL=Duplicar Registro - Tipos Salarios
+#Nuevo Registro Formulas
+NuevoRegistroFormulaConcepto=Nuevo Registro - Formulas
+ingresarnuevoF=Ingresar nueva informaci\u00f3n de Formula
+nombreformulaN=Nombre Formula: 
+nombreformulaWM=Nombre Formula
+ordenN=Orden: 
+ordenWM=Orden Liquidaci\u00f3n
+#Duplicar Registro Formulas
+DuplicarRegistroFormulaConcepto=Duplicar Registro - Formulas
+#Editar
+editarFechaInicialVCD=Fecha Inicial - Cuentas y Tipo CC
+editarFechaFinalVCD=Fecha Final - Cuentas y Tipo CC
+editarTipoCCVCD=Tipo CC - Cuentas y Tipo CC
+editaCodDebitoVCD=Debito - Cuentas y Tipo CC
+editaDesDebitoVCD=Descripci\u00f3n - Cuentas y Tipo CC
+editaCCConsolidadorDVCD=CC Consolidador - Cuentas y Tipo CC
+editaCodCreditoVCD=Cr\u00e9dito - Cuentas y Tipo CC
+editaDesCreditoVCD=Descripci\u00f3n - Cuentas y Tipo CC
+editaCCConsolidadorCVCD=CC Consolidador - Cuentas y Tipo CC
+editarFechaInicialVGCD=Fecha Inicial - Grupos Contables
+editarFechaFinalVGCD=Fecha Final - Grupos Contables
+editarCodigoVGCD=Codigo - Grupos Contables
+editaDescripcionVGCD=Descripcion - Grupos Contables
+editarFechaInicialVCTTD=Fecha Inicial - Tipos Trabajadores
+editarFechaFinalVCTTD=Fecha Final - Tipos Trabajadores
+editaDescripcionVCTTD=Descripcion - Tipos Trabajadores
+editarFechaInicialVCTCD=Fecha Inicial - Tipos Contratos
+editarFechaFinalVCTCD=Fecha Final - Tipos Contratos
+editaDescripcionVCTCD=Descripcion - Tipos Contratos
+editarFechaInicialVCRLD=Fecha Inicial - Tipos Salario
+editarFechaFinalVCRLD=Fecha Final - Tipos Salario
+editaDescripcionVCRLD=Descripcion - Tipos Salario
+editarFechaInicialFCD=Fecha Inicial - Formulas
+editarFechaFinalFCD=Fecha Final - Formulas
+editaFormulaFCD=Nombre Formula
+editaOrdenFCD=Orden de Liquidacion
+#Exportar
+fechainicialX=Fecha Inicial
+fechainicialXX=Fecha_Inicial
+fechafinalX=Fecha Final
+fechafinalXX=Fecha_Final
+tipoccX=Tipo CC
+tipoccXX=Tipo_CC
+debitoX=Debito
+descripcionX=Descripcion
+ccconsolidadorX=CC Consolidador
+ccconsolidadorXX=CC_Consolidador
+creditoX=Credito
+creditoXX=Credito
+descripcionX=Descripcion
+ccconsolidadorX=CC Consolidador
+ccconsolidadorXX=CC_Consolidador
+codigoX=Codigo
+descripciongrupoX=Descripci\u00f3n Grupo
+descripciongrupoXX=Descripci\u00f3n_Grupo
+descripciontipotrabajadorX=Descripcion Tipo Trabajador
+descripciontipotrabajadorXX=Descripcion_Tipo_Trabajador
+descripciontipocontratoX=Descripcion Tipo Contrato
+descripciontipocontratoXX=Descripcion_Tipo_Contrato
+descripciontiposalarioX=Descripcion Tipo Salario
+descripciontiposalarioXX=Descripcion_Tipo_Salario
+nombreformulaX=Nombre Formula
+nombreformulaXX=Nombre_Formula
+ordendeliquidacionX=Orden de Liquidaci\u00f3n
+ordendeliquidacionXX=Orden_de_Liquidaci\u00f3n
+#Otros
+vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
+lovvacio=No se encontraron resultados con el criterio de busqueda.
+si=Si
+no=No
+limpiar=Limpiar
+agregar=Agregar
+cancelar=Cancelar
+atencion=ATENCI\u00d3N...!
+aceptar=Aceptar
+atras=Atras
+validacionNuevo=Para agregar un nuevo acto inseguro es necesario adicionar:
+cambiosRealizados=\u00bfDesea guardar los cambios realizados?
+cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
+refrescar= Refrescar
+salir=Salir
