--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/elementocausaaccidente.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/elementocausaaccidente.properties
@@ -1,7 +1,8 @@
-titulo=Acto Inseguro
+titulo=Tipos de Lesi\u00f3n
+lesiones=Lesiones
 #Tabla
-codigo=C\u00f3digo
-descripcion=Descripci\u00f3n
+codigo=Codigo
+descripcion=Descripcion
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -10,9 +11,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Acto Inseguro
-eliminar=Borrar Acto Inseguro
-duplicar=Duplicar Acto Inseguro
+nuevo=Nueva Causa Accidente
+eliminar=Borrar Causa Accidente
+duplicar=Duplicar Causa Accidente
 rastro=Rastro
 #Dialogo
 validacionDuplicarVigencia=Necesita: 
@@ -21,20 +22,20 @@ mostrarBorrados1=Se han borrado
 mostrarBorrados2= Registros
 validacionNuevaCentroCosto=Para agregar es necesario adicionar: 
 #RASTRO
-confirmarRastro=La tabla 'SOACTOSINSEGUROS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla SOACTOSINSEGUROS tiene rastros historicos, \u00bfDesea continuar?
+confirmarRastro=La tabla 'ELEMENTOSCAUSASACCIDENTES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla ELEMENTOSCAUSASACCIDENTES tiene rastros historicos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'SOACTOSINSEGUROS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'ELEMENTOSCAUSASACCIDENTES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #EDITAR
 editCodigo=C\u00f3digo
 editDescripcion=Descripci\u00f3n
 #NUEVO REGISTRO
 nuevoregistro=Nuevo Registro
-ingresarnuevo=Ingresar Nuevo Acto Inseguro
+ingresarnuevo=Ingresar Nueva Causa Accidente
 codigoN=Codigo: 
 codigoWM=Codigo
 descripcionN=Descripcion: 
