PC PROYECTO01  24-01-2014 >> WAR

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportebienestar.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportebienestar.properties
@@ -88,3 +88,7 @@ xlsx=XLSX
 csv=CSV
 txt=TXT
 reportesR=Reportes
+infoReporteCodigoD=Codigo Reporte
+infoReporteNombreD=Nombre Reporte
+errorRegNew=Los campos Fecha Desde- Fecha Hasta- Empleado Desde - Empleado Hasta son obligatorios.
+errorFechas=La fecha hasta es menor a la fecha desde del parametro.
