--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
@@ -157,3 +157,7 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 reportesR=Reportes
+infoReporteCodigoD=Codigo Reporte
+infoReporteNombreD=Nombre Reporte
+errorRegNew=Los campos Fecha Desde- Fecha Hasta- Empleado Desde - Empleado Hasta  son obligatorios.
+errorFechas=La fecha hasta es menor a la fecha desde del parametro.
