--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/reportesbancos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/reportesbancos.properties
@@ -106,3 +106,7 @@ cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 ahorros=AHORROS
 corriente=CORRIENTE
+infoReporteCodigoD=Codigo Reporte
+infoReporteNombreD=Nombre Reporte
+errorRegNew=Los campos Fecha Desde- Fecha Hasta- Empleado Desde - Empleado Hasta  son obligatorios.
+errorFechas=La fecha hasta es menor a la fecha desde del parametro.
