--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/proverbio.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/proverbio.properties
@@ -47,7 +47,7 @@ nuevoregistroNP= Nuevo Registro - Proverbio
 ingresarnuevo= Ingresar un nuevo registro
 mensajeNP=Mensaje: 
 #NuevoRegistro Mensaje Usuario
-nuevoregistro= Nuevo registro - Mensaje del Usuario
+nuevoregistroNM= Nuevo registro - Mensaje del Usuario
 anoNM=A\u00f1o: 
 diaNM=Dia: 
 mesNM=Mes: 
@@ -82,3 +82,20 @@ mensajeX=Mensaje
 anoX=Ano
 mesX=Mes
 diaX=Dia
+#Todos 
+todoslosanos=TODOS LOS A\u00d1OS
+todoslosmeses=TODOS LOS MESES
+todoslosdias=TODOS LOS DIAS
+#Meses
+enero=ENERO
+febrero=FEBRERO
+marzo=MARZO
+abril=ABRIL
+mayo=MAYO
+junio=JUNIO
+julio=JULIO
+agosto=AGOSTO
+septiembre=SEPTIEMBRE
+octubre=OCTUBRE
+noviembre=NOVIEMBRE
+diciembre=DICIEMBRE
