PROYECTO01 PC - WAR>> 14/02/2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/proceso.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/proceso.properties
@@ -118,7 +118,7 @@ automaticoX=Automatico
 formulaX=Formula
 periodicidadX=Periodicidades Pendientes
 periodicidadXX=Periodicidades_Pendientes
-procesoX=Operando
+operandoX=Operando
 descripcionX=Descripcion
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
