PROYECTO01 PC - WAR>> 24/02/2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo.properties
@@ -178,3 +178,4 @@ empresa=Empresa:
 nit=NIT: 
 errorDescripcionTipoDetalle=El campo Descripcion es mayor a 40 caracteres.
 ingresoNuevoDetalleCargo=\u00bfDesea crear el registro del detalle de cargo?
+errorBorradoCargo=Para eliminar el Cargo es necesario que no tenga registros Detalles del Cargo asociados.
