--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/dependenciaoperando.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/dependenciaoperando.properties
@@ -1,11 +1,10 @@
 #Titulo y Fieldsets
-titulo=Tipos Bloques
-bloque=Bloque PLSQL
-#Tabla de Tipo Bloque
-fechainicial=Fecha Inicial
-fechafinal=Fecha Final
-tipo=Tipo
-codigoplsql=Codigo PL/SQL
+titulo=Operandos Dependientes
+dependencia=Dependencia
+#Tabla de Operandos
+codigo=Codigo
+nombre=Nombre Dependiente
+consecutivo=Consecutivo
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -19,14 +18,14 @@ eliminar=Borrar Registro
 duplicar=Duplicar Registro
 rastro=Rastro
 #RASTRO
-confirmarRastro=La tabla 'TIPOSBLOQUES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla TIPOSBLOQUES tiene rastros historicos, \u00bfDesea continuar?
+confirmarRastro=La tabla 'DEPENDENCIASOPERANDOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla DEPENDENCIASOPERANDOS tiene rastros historicos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'TIPOSBLOQUES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'DEPENDENCIASOPERANDOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
 lovvacio=No se encontraron resultados con el criterio de busqueda.
@@ -38,33 +37,28 @@ cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar un nuevo bloque es necesario adicionar:
+validacionNuevo=Para agregar una nueva dependencia es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 #Editar
-editarSQL=Codigo PL/SQL
-editarFechasIniciales=Fecha Inicial
-editarFechasFinales=Fecha Final
+editarCodigos=Codigos
+editarConsecutivos=Consecutivos
+#LOV OPERANDO
+operandosO=Operandos
+buscarO=Buscar Operando: 
+codigoO=Codigo
+nombreO=Nombre
+descripcionO=Descripcion
 #Nuevo Registro
 nuevoregistro=Nuevo Registro
 ingresarnuevo=Ingresar nuevo registro
-inicialN=Fecha Inicial: 
-finalN=Fecha Final: 
-tipoN=Tipo: 
-codigoN=Codigo PL/SQL: 
+codigoN=Codigo: 
+nombreN=Nombre: 
+consecutivoN=Consecutivos: 
 #Duplicar Registro
 duplicarregistro=Duplicar Registro
 #Exportar
-tipoX=Tipo
-fechainicialX=Fecha Inicial
-fechainicialXX=Fecha_Inicial
-fechafinalX=Fecha Final
-fechafinalXX=Fecha_Final
-plsqlX=PL/SQL
-errorfechas=La Fecha Final no puede ser anterior a la fecha inicial
-#Tipo
-numerico=NUMERICO
-caracter=CARACTER
-fecha=FECHA
-dependencia=Dependencia...
+codigoX=Codigo
+nombreX=Nombre
+consecutivoX=Consecutivo
