--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadoperando.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadoperando.properties
@@ -53,3 +53,4 @@ nombreN=Nombre:
 duplicarregistro=Duplicar Registro
 #Exportar
 nombreX=Nombre
+operandorecalculado=El Operando recalculado ya existe.
