--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
@@ -142,3 +142,4 @@ nombreterceroX=Tercero
 estadoX=Estado
 enviaraX=Envio_Tesoreria
 codigoalternativoX=C\u00f3digo_Alternativo
+detalle=Detalles del concepto seleccionado
