--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipoformula.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipoformula.properties
@@ -70,3 +70,4 @@ fechafinalXX=Fecha_Final
 formulaX=Formula
 estadoX=Estado
 errorfechas=La Fecha Final no puede ser anterior a la fecha inicial
+dirigirFormula=Formula
