PROYECTO01 PC - WAR>> 28/02/2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipobloque.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipobloque.properties
@@ -67,3 +67,4 @@ errorfechas=La Fecha Final no puede ser anterior a la fecha inicial
 numerico=NUMERICO
 caracter=CARACTER
 fecha=FECHA
+dependencia=Dependencia...
