--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/dependenciaoperando.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/dependenciaoperando.properties
@@ -1,11 +1,10 @@
 #Titulo y Fieldsets
-titulo=Tipos Formulas
-formula=Formula
+titulo=Operandos Dependientes
+dependencia=Dependencia
 #Tabla de Operandos
-fechainicial=Fecha Inicial
-fechafinal=Fecha Final
-formula=Formula
-estado=Estado
+codigo=Codigo
+nombre=Nombre Dependiente
+consecutivo=Consecutivo
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -19,14 +18,14 @@ eliminar=Borrar Registro
 duplicar=Duplicar Registro
 rastro=Rastro
 #RASTRO
-confirmarRastro=La tabla 'TIPOSFORMULAS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla TIPOSFORMULAS tiene rastros historicos, \u00bfDesea continuar?
+confirmarRastro=La tabla 'DEPENDENCIASOPERANDOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla DEPENDENCIASOPERANDOS tiene rastros historicos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'TIPOSFORMULAS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'DEPENDENCIASOPERANDOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
 lovvacio=No se encontraron resultados con el criterio de busqueda.
@@ -38,36 +37,28 @@ cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar una nueva formula es necesario adicionar:
+validacionNuevo=Para agregar una nueva dependencia es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 #Editar
-editarFechasIniciales=Fecha Inicial
-editarFechasFinales=Fecha Final
-editarFormulas=Formula
-editarEstados=Estados
-#LOV FORMULA
-formulasF=Formulas
-buscarF=Buscar Formula
-estadoF=Estado
-nombrecortoF=Nombre Corto
-nombrelargoF=Nombre Largo
+editarCodigos=Codigos
+editarConsecutivos=Consecutivos
+#LOV OPERANDO
+operandosO=Operandos
+buscarO=Buscar Operando: 
+codigoO=Codigo
+nombreO=Nombre
+descripcionO=Descripcion
 #Nuevo Registro
 nuevoregistro=Nuevo Registro
 ingresarnuevo=Ingresar nuevo registro
-fechainicialN=Fecha Inicial: 
-fechafinalN=Fecha Final: 
-formulaN=Formula: 
-estadoN=Estado: 
+codigoN=Codigo: 
+nombreN=Nombre: 
+consecutivoN=Consecutivos: 
 #Duplicar Registro
 duplicarregistro=Duplicar Registro
 #Exportar
-fechainicialX=Fecha Inicial
-fechainicialXX=Fecha_Inicial
-fechafinalX=Fecha Final
-fechafinalXX=Fecha_Final
-formulaX=Formula
-estadoX=Estado
-errorfechas=La Fecha Final no puede ser anterior a la fecha inicial
-dirigirFormula=Formula
+codigoX=Codigo
+nombreX=Nombre
+consecutivoX=Consecutivo
