PROYECTO01 PC - WAR>> 03/03/2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo.properties
@@ -167,6 +167,8 @@ atras=Atras
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+buscarCargo=Buscar Cargo
+mostrarTodos=Mostrar Todos
 #RASTRO
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
@@ -179,3 +181,5 @@ nit=NIT:
 errorDescripcionTipoDetalle=El campo Descripcion es mayor a 40 caracteres.
 ingresoNuevoDetalleCargo=\u00bfDesea crear el registro del detalle de cargo?
 errorBorradoCargo=Para eliminar el Cargo es necesario que no tenga registros Detalles del Cargo asociados.
+buscarCargoD=Cargos
+buscarBC=Buscar Cargo;
