PROYECTO01 PC - WAR>> 14/03/2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleempresa.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleempresa.properties
@@ -1,4 +1,275 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
+titulo=Detalles de Empresas
+#Toolbar
+guardar=Guardar
+editar=Editar
+lista=Lista de Valores
+filtrar=Activar Filtrado
+xls=Exportar a XLS
+xml=Exportar a XML
+pdf=Exportar a PDF
+nuevo=Nuevo Detalle
+eliminar=Borrar Detalle
+duplicar=Duplicar Detalle
+rastro=Rastro
+#Tabla
+empresa=Empresa
+tipoDocumento=Tipo Documento
+nit=NIT
+cedula=CEDULA
+cedulaExtranjeria=CEDULA EXTRANJERIA
+tarjetaIde=TARJETA IDENTIDAD
+regCivil=REGISTRO CIVIL
+pasaporte=PASAPORTE
+tipoEmpresa=Tipo Empresa
+direccion=Direccion
+ciudad=Ciudad
+telefono=Telefono
+fax=FAX
+nombreRepre=Nombre Representante
+documentoRepre=Documento del Representante
+ciudadDoc=Ciudad del Documento
+tipoNit=Tipo NIT
+digitoVer=Digito Verificacion
+gerenteGeneral=Gerente General
+personaFirma=Persona Firma Constancia
+cargoFirma=Cargo Firma Constancia
+email=Email
 
+tipoZona=Zona
+urbana=URBANA
+rural=RURAL
+ciuu=CIIU
+actividadEconomica=Actividad Economica
+subGerente=SubGerente
+arquitecto=Arquitecto
+cargoArquitecto=Cargo Arquitecto
+representante=Representante Legal Empresa
+planilla=N# Planilla
+tipoPersona=Tipo de Persona
+natural=NATURAL
+juridica=JURIDICA
+naturalezaJ=Naturaleza Juridica
+publica=PUBLICA
+privada=PRIVADA
+mixta=MIXTA
+organismoMulti=ORGANISMO MULTILATERAL
+entidadDerecho=ENTIDADES DE DERECHO PUBLICO NO SOMETIDO A LEGISLACION COLOMBIANA
+claseAportante=Clase de Aportante
+aportanteMas=APORTANTE CON MAS DE 200 COTIZANTES
+aportanteMenos=APORTANTE CON MENOS DE 200 COTIZANTES
+independiente=INDEPENDIENTE
+formaPresentacion=Presentacion
+unico=UNICO
+consolidado=CONSOLIDADO
+sucursal=SUCURSAL
+dependencia=DEPENDENCIA
+tipoAportante=Tipo de Aportante
+empleador=EMPLEADOR
+independiente=INDEPENDIENTE
+entidadesUPublic=ENTIDADES O UNIVERSIDADES PUBLICA CON REGIMEN ESPECIAL EN SALUD
+agremiaciones=AGREMIACIONES O ASOCIACIONES
+cooperativas=COOPERATIVAS Y PRECOPERATIVAS DE TRABAJO ASOCIADO
+misionesDiplo=MISIONES DIPLOMATICAS, CONSULARES U ORGANISMOS MULTILATERALES
+orgaAdmistrativas=ORGANIZACIONES ADMINISTRADORAS DEL PROGRAMA DE HOGARES DE BIENESTAR
+pagadorAportes=PAGADOR DE APORTES DE LOS CONCEJALES MUNICIPALES
+tipoAccion=Tipo de Accion
+concordato=CONCORDATO
+reestructuracion=REESTRUCTURACION
+liquidacion=LIQUIDACION
+ceseActividades=CESE DE ACTIVIDADES
+fechaCamaraComercio=Fecha Camara de Comercio
+a\u00f1osParafiscal=A\u00f1os Exentos Parafiscal
+#LOV EMPRESAS
+empresasD=Empresas
+buscarE=Buscar Empresa: 
+nombreE=Nombre
+#LOV CIUDADES
+ciudadD=Ciudades
+buscarC=Buscar Ciudad: 
+nombrec=Nombre
+#LOV GERENTE
+gerenteD=Empleados
+buscarG=Buscar Empleado: 
+nombreEmpl=Nombre Empleado
+#LOV PERSONA
+personaD=Persona Firma
+buscaP=Buscar Persona: 
+nombrePer=Nombre Persona
+#LOV CARGO
+cargoD=Cargo Firma
+buscaCar=Buscar Cargo: 
+nombreCar=Nombre Cargo
+#LOV SUBGERENTE
+subGerenteD=SubGerente
+#LOV REPRESENTANTE
+representanteD=Representante Legal
+
+#Nuevo Registro
+nuevoregistro=Nuevo Registro Detalle Empresa
+ingresarnuevo=Ingresar nueva informaci\u00f3n detalle empresa
+empresaN=Empresa: 
+tipoDocumentoN=Tipo Documento: 
+tipoEmpresaN=Tipo Empresa: 
+direccionN=Direccion: 
+ciudadN=Ciudad: 
+telefonoN=Telefono: 
+faxN=FAX: 
+nombreRepresentanteN=Nombre Representante: 
+documentoRepresentanteN=Documento Representante: 
+ciudadDocumentoN=Ciudad Documento: 
+tipoNitN=Tipo Nit: 
+digitoVerificacionN=Digito Verificacion: 
+gerenteN=Gerente General: 
+personaFirmaN=Persona Firma: 
+cargoFirmaN=Cargo Firma: 
+emailN=Email: 
+zonaN=Zona: 
+actEconomicaN=Actividad Economica: 
+subGerenteN=SubGerente: 
+arquitectoN=Arquitecto: 
+cargoArquitectoN=Cargo Arquitecto: 
+representanteN=Representante: 
+planillaN=N# Planilla: 
+tipoPersonaN=Tipo Persona: 
+naturalezaJN=Naturaleza Juridica: 
+claseAportanteN=Clase Aportante: 
+formaPresentacionN=Presentacion
+tipoAportanteN=Tipo Aportante: 
+tipoAccionN=Tipo Accion: 
+camaraComercioN=Fecha Camara Comercio: 
+a\u00f1osParafiscalN=A\u00f1os Exento Parafiscal
+#Duplicar Registro
+duplicarregistro=Duplicar Registro Detalle Empresa
+#EDITAR
+editarEmpresaDE=Empresa - Detalle
+editarTipoEmpresaDE=Tipo Empresa - Detalle
+editarDireccionDE=Direccion - Detalle
+editarCiudadDE=Ciudad - Detalle
+editarTelefonoDE=Telefono - Detalle
+editarFaxDE=FAX - Detalle
+editarNombreRepresentanteDE=Nombre de Representante
+editarDocumentoRepresentanteDE=Documento del Representante
+editarCiudadDocumentoDE=Ciudad del Documento
+editarTipoNitDE=Tipo Nit - Detalle
+editarDigitoVerificacionDE=Digito Verificacion
+editarGerenteDE=Gerente General - Detalle
+editarPersonaFirmaDE=Persona Firma Constancia
+editarCargoFirmaDE=Cargo Firma Constancia
+editarEmailDE=Email - Detalle
+editarCIIUDE=CIIU - Detalle
+editarActEconomicaDE=Actividad Economica Empresa
+editarSubGerenteDE=SubGerente - Detalle
+editarArquitectoDE=Arquitecto - Detalle
+editarCargoArquitectoDE=Cargo del Arquitecto
+editarRepresentanteDE=Representante Legal Empresa
+editarNPlanillaDE=Numero Planilla - Detalle
+editarFechaCamaraComercioDE=Fecha Camara Comercio
+#Exportar
+empresaX=Empresa
+tipoDocumentoX=Tipo Documento
+tipoDocumentoXX=Tipo_Documento
+tipoEmpresaX=Tipo Empresa
+tipoEmpresaXX=Tipo_Empresa
+direccionX=Direccion
+ciudadX=Ciudad
+telefonoX=Telefono
+faxX=FAX
+nombreRepresentanteX=Nombre Representante
+nombreRepresentanteXX=Nombre_Representante
+documentoRepresentanteX=Documento Representante
+documentoRepresentanteXX=Documento_Representante
+ciudadDocumentoX=Ciudad Documento
+ciudadDocumentoXX=Ciudad_Documento
+tipoNitX=Tipo Nit
+tipoNitXX=Tipo_Nit
+digitoVerificacionX=Digito Verificacion
+digitoVerificacionXX=Digito_Verificacion
+gerenteGeneralX=Gerente General
+gerenteGeneralXX=Gerente_General
+personaFirmaX=Persona Firma Constancia
+personaFirmaXX=Persona_Firma_Constancia
+cargoFimaX=Cargo Firma Constancia
+cargoFimaXX=Cargo_Firma_Constancia
+emailX=Email
+zonaX=Tipo Zona
+zonaXX=Tipo_Zona
+ciiuX=Codigo DANE CIIU
+ciiuXX=Codigo_DANE_CIIU
+actEconomicaX=Actividad Economica
+actEconomicaXX=Actividad_Economica
+subGerenteX=SubGerente
+arquitectoX=Arquitecto
+cargoArqX=Cargo Arquitecto
+cargoArqXX=Cargo_Arquitecto
+representanteX=Representante Legal
+representanteXX=Representante_Legal
+NPlanillaX=N#Planilla
+tipoPersonaX=Tipo Persona
+tipoPersonaXX=Tipo_Persona
+naturalezaJX=Naturaleza Juridica
+naturalezaJXX=Naturaleza_Juridica
+claseAportanteX=Clase Aportante
+claseAportanteXX=Clase_Aportante
+presentacionX=Forma Presentacion
+presentacionXX=Forma_Presentacion
+tipoAportanteX=Tipo Aportante
+tipoAportanteXX=Tipo_Aportante
+tipoAccionX=Tipo Accion
+tipoAccionXX=Tipo_Accion
+camaraComercioX=Fecha Camara Comercio
+camaraComercioXX=Fecha_Camara_Comercio
+anoParafiscalX=A\u00f1os Exentos Parafiscal
+anoParafiscalXX=A\u00f1os_Exentos_Parafiscal
+
+#Otros
+vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
+lovvacio=No se encontraron resultados con el criterio de busqueda.
+si=Si
+no=No
+limpiar=Limpiar
+agregar=Agregar
+cancelar=Cancelar
+atencion=ATENCI\u00d3N...!
+aceptar=Aceptar
+atras=Atras
+validacionNuevo=Para agregar un nuevo proyecto es necesario adicionar:
+cambiosRealizados=\u00bfDesea guardar los cambios realizados?
+cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
+refrescar= Refrescar
+#RASTRO
+confirmarRastro=La tabla 'DETALLESEMPRESAS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla DETALLESEMPRESAS tiene rastros historicos, \u00bfDesea continuar?
+errorRastroHistorico=La tabla no tiene rastros historicos.
+errorRegistroRastro=El registro seleccionado no tiene rastros.
+errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
+errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
+seleccionarRegistro=Por favor seleccione un registro.
+errorObjetosDB=La tabla 'DETALLESEMPRESAS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+#Dialogo
+errorFechas=La fecha de camara de comercio es menor a 01/01/1900
+errorDatosNull=Los campos Empresa-Tipo Documento-Direccion-Ciudad-Telefono-FAX-Nombre Representante-Documento Representante son obligatorios.
+ciiuN=CIIU: 
+headerCIUU=Codigo DANE Actividad Economica de la Empresa
+headerReformaExonera=Reforma Exonera
+headerPilaMultinea=Pila Multilinea
+headerSolidaridadFosyga=Solidaridad Exento
+headerExoneraLnsTarifa=Exonera LNS AFP
+headerReportaLnsTarifa=Reporta LNS AFP
+nombreC=Nombre
+empresasE=Empresas
+reportaLNSXX=Reporta_LNS_AFP
+reportaLNSX=Reporta LNS AFP
+exoneraLNSXX=Exonera_LNS_AFP
+exoneraLNSX=Exonera LNS AFP
+solidaridadExentoXX=Solidaridad_Exento
+solidaridadExentoX=Solidaridad Exento
+pilaMultiXX=Pila_Multilinea
+pilaMultiX=Pila Multilinea
+reformaExoneraXX=Reforma_Exonera
+reformaExoneraX=Reforma Exonera
+nuevaTapSegSocial=Configuracion de Seguridad Social
+nuevaTapInfoAd=Informacion Adicional de la Empresa
+nuevaTapInfoGerencial=Informacion de Gerencia
+nuevaTapInfoJuridica=Informacion Juridica
+nuevaTapDatosBasicos=Datos Basicos
+camposNecesarios=Los campos con * son obligatorios.
