PROYECTO01 PC - WAR>> 17/03/2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/proceso.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/proceso.properties
@@ -154,3 +154,5 @@ clonar=Clonar
 operandoGC=Operando GC
 errorDatosClonado=Los nombres y codigos del proceso nuevo y base son obligatorios
 errorCodigoClon=El codigo del nuevo proceso ya se encuentra registrado por otro proceso
+procesoX=Operando
+procesoClonar=Clonar Proceso
