--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadembargo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadembargo.properties
@@ -23,19 +23,21 @@ duplicar=Duplicar Registro
 rastro=Rastro
 #Tabla de Embargos
 tipoembargo=Tipo Embargo
-numerooficio=Numero / Nombre Oficio
+numerooficio=#/N. Oficio
+numerooficioTT=Numero/Nombre Oficio
 fechaoficio=Fecha Oficio
-numeroproceso=Numero Proceso
+numeroproceso=# P.
+numeroprocesoTT=Numero de Proceso
 juzgado=Juzgado
 motivoembargo=Motivo Embargo
 demandante=Nombre Demandante
 nit=N.I.T Consigna
 descuento=Descuento con destino a Terceros
 valortotal=Valor Total
-fechainicialdescuento=Fecha Inicial Descuento
+fechainicialdescuento=F. Ini. Dto.
 formadescuento=Forma Descuento
 cancelaciondocumento=Cancelacion Documento
-fechacancelacion=Fecha Cancelacion
+fechacancelacion=F. Cancel
 observaciones=Observaciones
 #Tabla Detalles Embargos
 pagoscomprometidos=Pagos Comprometidos
