--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/declarante.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/declarante.properties
@@ -39,7 +39,7 @@ cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar un nuevo registro es necesario adicionar:
+validacionNuevo=La fecha inicial y la fecha final son obligatorias
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
@@ -76,4 +76,7 @@ deseadoXX=Valor_Deseado
 tarifadeseoX=Tarifa Deseo
 tarifadeseoXX=Tarifa_Deseo
 #Fecha Nula
+fechas=Los campos de fecha inicial y fecha final, no concuerdan. Por favor, revise que la fecha final sea posterior a la fecha inicial
+traslapamiento=Hay un traslapamiento en las fechas. Por favor, revisar las fechas
+errorFechas=La Fecha Inicial o la Fecha Final son nulas
 fechanula=La fecha final no puede ser nula, si se desea mostrar la lista de valores
