--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/declarante.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/declarante.properties
@@ -51,8 +51,8 @@ editarMinima=Tarifa Minima
 #Nuevo Registro
 nuevoregistro=Nuevo Registro
 ingresarnuevo=Ingresar nuevo registro
-fechainicioN=Fecha Inicio: 
-fechafinalN=Fecha Final: 
+fechainicioN=*Fecha Inicio: 
+fechafinalN=*Fecha Final: 
 declaranteN=Declarante (Si/No): 
 deseadoN=$ Deseado: 
 tarifadeseoN=Tarifa Deseada: 
