--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
@@ -161,3 +161,8 @@ infoReporteCodigoD=Codigo Reporte
 infoReporteNombreD=Nombre Reporte
 errorRegNew=Los campos Fecha Desde- Fecha Hasta- Empleado Desde - Empleado Hasta  son obligatorios.
 errorFechas=La fecha hasta es menor a la fecha desde del parametro.
+informacion=Informaci\u00f3n
+generandoReporte=Generando reporte, esto puede tardar algunos minutos...
+mensajeExitoReporte=Reporte generado con exito.
+descargar=Descargar
+errorReporte=Error generando el reporte
