--- a/DesignerRHN/DesignerRHN-war/nbproject/project.properties
+++ b/DesignerRHN/DesignerRHN-war/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.commons-io-2.4-src.zip=..\\Librerias\\commons-io-2.4-src.zip
 file.reference.commons-io-2.4.jar=..\\Librerias\\commons-io-2.4.jar
 file.reference.commons-lang3-3.1.jar=..\\Librerias\\commons-lang3-3.1\\commons-lang3-3.1.jar
 file.reference.iText-2.1.7.jar=..\\Librerias\\itext-2.1.7\\iText-2.1.7.jar
+file.reference.jasperreports-5.5.0.jar=..\\Librerias\\Librerias_Reportes\\jasperreports-5.5.0.jar
 file.reference.poi-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-3.9-20121203.jar
 file.reference.poi-excelant-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-excelant-3.9-20121203.jar
 file.reference.poi-ooxml-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-ooxml-3.9-20121203.jar
@@ -65,7 +66,8 @@ javac.classpath=\
     ${file.reference.primefaces-extensions-0.7.1.jar}:\
     ${file.reference.commons-lang3-3.1.jar}:\
     ${reference.DesignerRHN-ejb.dist}:\
-    ${file.reference.all-themes-1.0.10.jar}
+    ${file.reference.all-themes-1.0.10.jar}:\
+    ${file.reference.jasperreports-5.5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
